--- a/app/src/main/res/layout/manuka_fragment_enter_code.xml
+++ b/app/src/main/res/layout/manuka_fragment_enter_code.xml
@@ -1,53 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:background="@color/colorWhite"
-    android:padding="16dp"
+    android:orientation="vertical"
+    android:padding="@dimen/_16sdp"
     tools:context=".ui.addphone.EnterCode">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="8dp"
         android:orientation="horizontal"
+        android:padding="@dimen/_6sdp"
         tools:context=".ui.addphone.EnterCode">
 
         <ImageView
-            android:layout_weight="0.1"
+            android:layout_width="@dimen/_68sdp"
+            android:layout_height="@dimen/_68sdp"
             android:layout_gravity="center_vertical"
-            android:layout_width="80dp"
-            android:layout_height="70dp"
-            android:background="@drawable/icon_sms_medium"/>
+            android:layout_weight="0.1"
+            android:background="@drawable/icon_sms_medium"
+            android:contentDescription="@string/image" />
 
         <LinearLayout
-            android:layout_weight="0.9"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="0.9"
             android:orientation="vertical"
             tools:context=".ui.addphone.EnterCode">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/colorBlack"
                 android:text="@string/enterCode_SMS_SENT_TO"
-                android:textSize="18sp"/>
+                android:textColor="@color/colorBlackText"
+                android:textSize="@dimen/_14sdp" />
+
             <TextView
                 android:id="@+id/phoneNumber"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/colorGreen"
                 android:text="@string/PhoneNumber"
-                android:textSize="16sp"/>
+                android:textColor="@color/colorGreenDark"
+                android:textSize="@dimen/_14sdp"
+                android:textStyle="italic" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/enterCode_time_arrive"
-                android:textSize="14sp"/>
+                android:textSize="@dimen/_12sdp" />
 
         </LinearLayout>
 
@@ -56,82 +61,87 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="20dp"
-        android:layout_height="1dp"
-        android:background="#33000000"/>
+        android:layout_height="@dimen/_1sdp"
+        android:layout_marginTop="@dimen/_10sdp"
+        android:layout_marginBottom="@dimen/_16sdp"
+        android:background="#33000000" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/codeEntered"
         android:layout_width="match_parent"
-        app:errorEnabled="true"
-        app:counterMaxLength="6"
+        android:layout_height="wrap_content"
         app:counterEnabled="true"
-        android:layout_height="wrap_content">
+        app:counterMaxLength="6"
+        app:errorEnabled="true"
+        app:hintTextColor="@color/mainUiColour">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:hint="@string/enterCode_editText_hint"
-            android:maxLength="6"
-            android:textColorHint="@color/colorGreen"
             android:inputType="number"
-            android:layout_height="wrap_content"/>
+            android:maxLength="6"
+            android:textColorHint="@color/mainUiColour"
+            android:textCursorDrawable="@drawable/cursor_main_ui"
+            android:textSize="@dimen/_14sdp"
+            android:theme="@style/EditTextMainUiTheme" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
     <LinearLayout
         android:id="@+id/phoneVerifyLayout"
         android:layout_width="match_parent"
+        android:layout_height="@dimen/_34sdp"
+        android:layout_marginTop="@dimen/_14sdp"
         android:background="@color/colorGreyBtn"
         android:orientation="horizontal"
-        android:layout_marginTop="20dp"
-        android:padding="8dp"
-        android:layout_height="wrap_content">
+        android:padding="@dimen/_6sdp">
 
         <ProgressBar
             android:id="@+id/progressBarCodeVerify"
             android:layout_width="match_parent"
+            android:layout_height="@dimen/_24sdp"
             android:layout_gravity="center"
-            android:visibility="gone"
             android:indeterminate="true"
-            android:indeterminateTintMode="src_atop"
             android:indeterminateTint="@color/colorWhite"
-            android:layout_height="24dp" />
+            android:indeterminateTintMode="src_atop"
+            android:visibility="gone" />
 
         <TextView
             android:id="@+id/PhoneVerifyTextView"
-            android:visibility="visible"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
+            android:layout_height="@dimen/_24sdp"
             android:clickable="true"
-            android:textAllCaps="false"
-            android:textStyle="bold"
+            android:focusable="true"
+            android:gravity="center"
             android:text="@string/order_phone_btn_verify"
+            android:textAllCaps="false"
             android:textColor="@color/colorWhite"
-            android:textSize="20sp" />
+            android:textSize="@dimen/_18sdp"
+            android:textStyle="bold"
+            android:visibility="visible" />
 
     </LinearLayout>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/enterCode_didnt_recieve"
+        android:layout_marginTop="@dimen/_20sdp"
         android:gravity="center"
-        android:layout_marginTop="30dp"
-        android:textSize="18sp"
-        android:textColor="@color/colorBlackText"/>
+        android:text="@string/enterCode_didnt_recieve"
+        android:textColor="@color/colorBlackText"
+        android:textSize="@dimen/_14sdp" />
 
     <TextView
         android:id="@+id/checkAgain"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/enterCode_check_your_phone_again"
+        android:layout_marginTop="@dimen/_8sdp"
+        android:layout_marginBottom="@dimen/_14sdp"
         android:gravity="center"
-        android:layout_marginTop="14dp"
-        android:layout_marginBottom="20dp"
-        android:textSize="16sp"
-        android:textColor="@color/colorGreen"/>
+        android:text="@string/enterCode_check_your_phone_again"
+        android:textColor="@color/colorGreen"
+        android:textSize="@dimen/_12sdp" />
 
     <LinearLayout
         android:id="@+id/snackbar_text"
