--- a/app/src/main/res/layout/manuka_fragment_order_phone_verify.xml
+++ b/app/src/main/res/layout/manuka_fragment_order_phone_verify.xml
@@ -72,6 +72,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textSize="@dimen/_14sdp"
             android:hint="@string/verification_code"
             android:inputType="number"
             android:textCursorDrawable="@drawable/cursor_main_ui"
