--- a/app/src/main/res/drawable/background_dashboard.xml
+++ b/app/src/main/res/drawable/background_dashboard.xml
@@ -12,7 +12,7 @@
                 android:angle="360" />
         </shape>
     </item>
-    <item android:top="200dp" >
+    <item android:top="@dimen/_160sdp" >
         <shape android:shape="rectangle" >
             <corners
                 android:bottomLeftRadius="0dip"
@@ -24,7 +24,7 @@
                 android:startColor="@color/colorHome"
                 android:endColor="@color/colorHome"
                 android:angle="270" />
-            <size android:height="30dp" />
+            <size android:height="@dimen/_30sdp" />
         </shape>
     </item>
 </layer-list>
