--- a/app/src/main/res/layout/toolbar_search_keyword.xml
+++ b/app/src/main/res/layout/toolbar_search_keyword.xml
@@ -1,25 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="@dimen/_50sdp"
     android:background="@color/colorWhite"
     android:padding="@dimen/_2sdp"
     android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
-    <!-- Manuka -->
+    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+    app:titleTextAppearance="@style/Toolbar.title">
 
     <EditText
         android:id="@+id/search_keyword"
-        android:textSize="@dimen/_14sdp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@android:color/transparent"
         android:focusableInTouchMode="true"
-        android:textColor="@color/colorBlackText"
         android:imeOptions="actionSearch"
+        android:inputType="text"
+        android:textColor="@color/colorBlackText"
         android:textColorHint="@color/colorWhite"
         android:textCursorDrawable="@drawable/cursur_black"
-        android:background="@android:color/transparent"
-        android:inputType="text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:textSize="@dimen/_14sdp"
+        android:importantForAutofill="no" />
 
 </androidx.appcompat.widget.Toolbar>
