--- a/app/src/main/res/layout/toolbar_admin.xml
+++ b/app/src/main/res/layout/toolbar_admin.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="@dimen/_50sdp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/com_facebook_blue"
     android:elevation="@dimen/_4sdp"
-    app:titleTextAppearance="@style/Toolbar.title"
     android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+    app:subtitleTextAppearance="@style/ToolbarSubtitle"
+    app:titleTextAppearance="@style/Toolbar.title">
     <!-- Manuka -->
 
 </androidx.appcompat.widget.Toolbar>
