--- a/app/src/main/res/layout/toolbar_search_keyword.xml
+++ b/app/src/main/res/layout/toolbar_search_keyword.xml
@@ -7,6 +7,7 @@
     android:padding="@dimen/_2sdp"
     android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
     app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+    app:subtitleTextAppearance="@style/ToolbarSubtitle"
     app:titleTextAppearance="@style/Toolbar.title">
 
     <EditText
@@ -16,11 +17,11 @@
         android:background="@android:color/transparent"
         android:focusableInTouchMode="true"
         android:imeOptions="actionSearch"
+        android:importantForAutofill="no"
         android:inputType="text"
         android:textColor="@color/colorBlackText"
         android:textColorHint="@color/colorWhite"
         android:textCursorDrawable="@drawable/cursur_black"
-        android:textSize="@dimen/_14sdp"
-        android:importantForAutofill="no" />
+        android:textSize="@dimen/_14sdp" />
 
 </androidx.appcompat.widget.Toolbar>
