--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -58,6 +58,10 @@
         <item name="android:textSize">@dimen/_16sdp</item>
     </style>
 
+    <style name="ToolbarSubtitle" parent="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle">
+        <item name="android:textSize">@dimen/_12sdp</item>
+    </style>
+
     <!-- Divya -->
 
 
