--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/colorHome"
     tools:context=".ui.home.Account"
+    android:layout_marginBottom="@dimen/_18sdp"
     tools:targetApi="m">
 
     <!-- Manuka -->
@@ -38,16 +39,15 @@
 
             <Button
                 android:id="@+id/linkfb"
+                android:padding="@dimen/_8sdp"
                 android:layout_width="wrap_content"
-                android:layout_height="@dimen/_28sdp"
+                android:layout_height="@dimen/_38sdp"
                 android:layout_marginStart="@dimen/_10sdp"
                 android:layout_marginBottom="@dimen/_20sdp"
                 android:background="@drawable/button_round_fb"
-                android:drawableStart="@drawable/com_facebook_button_icon"
+                android:drawableStart="@drawable/custom_fb_icon"
                 android:drawablePadding="@dimen/_6sdp"
                 android:gravity="center"
-                android:paddingStart="@dimen/_10sdp"
-                android:paddingEnd="@dimen/_10sdp"
                 android:text="@string/loading"
                 android:textAllCaps="false"
                 android:textColor="@color/colorWhite"
@@ -56,6 +56,7 @@
 
             <Button
                 android:id="@+id/myads"
+                android:padding="@dimen/_8sdp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/_2sdp"
@@ -65,8 +66,6 @@
                 android:drawableTint="#8C8C8C"
                 android:elevation="@dimen/_2sdp"
                 android:fontFamily="@font/droid_sans"
-                android:paddingStart="@dimen/_6sdp"
-                android:paddingEnd="@dimen/_6sdp"
                 android:text="@string/account_myads"
                 android:textAlignment="textStart"
                 android:textAllCaps="false"
@@ -75,6 +74,7 @@
             <Button
                 android:id="@+id/myChats"
                 android:layout_width="match_parent"
+                android:padding="@dimen/_8sdp"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/_2sdp"
                 android:background="@color/colorWhite"
@@ -83,8 +83,6 @@
                 android:drawableTint="#8C8C8C"
                 android:elevation="@dimen/_2sdp"
                 android:fontFamily="@font/droid_sans"
-                android:paddingStart="@dimen/_6sdp"
-                android:paddingEnd="@dimen/_6sdp"
                 android:text="@string/my_chats"
                 android:textAlignment="textStart"
                 android:textAllCaps="false"
@@ -101,8 +99,7 @@
                 android:drawableTint="#8C8C8C"
                 android:elevation="@dimen/_2sdp"
                 android:fontFamily="@font/droid_sans"
-                android:paddingStart="@dimen/_6sdp"
-                android:paddingEnd="@dimen/_6sdp"
+                android:padding="@dimen/_8sdp"
                 android:text="@string/account_membership"
                 android:textAlignment="textStart"
                 android:textAllCaps="false"
@@ -110,6 +107,7 @@
 
             <Button
                 android:id="@+id/favourite"
+                android:padding="@dimen/_8sdp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/_2sdp"
@@ -119,8 +117,6 @@
                 android:drawableTint="#8C8C8C"
                 android:elevation="@dimen/_2sdp"
                 android:fontFamily="@font/droid_sans"
-                android:paddingStart="@dimen/_6sdp"
-                android:paddingEnd="@dimen/_6sdp"
                 android:text="@string/account_fav"
                 android:textAlignment="textStart"
                 android:textAllCaps="false"
@@ -138,8 +134,7 @@
                 android:drawableTint="#8C8C8C"
                 android:elevation="@dimen/_2sdp"
                 android:fontFamily="@font/droid_sans"
-                android:paddingStart="@dimen/_6sdp"
-                android:paddingEnd="@dimen/_6sdp"
+                android:padding="@dimen/_8sdp"
                 android:text="@string/account_profile"
                 android:textAlignment="textStart"
                 android:textAllCaps="false"
@@ -157,8 +152,7 @@
             android:drawableTint="#8C8C8C"
             android:elevation="@dimen/_2sdp"
             android:fontFamily="@font/droid_sans"
-            android:paddingStart="@dimen/_6sdp"
-            android:paddingEnd="@dimen/_6sdp"
+            android:padding="@dimen/_8sdp"
             android:text="@string/account_safe"
             android:textAlignment="textStart"
             android:textAllCaps="false"
@@ -175,8 +169,7 @@
             android:drawableTint="#8C8C8C"
             android:elevation="@dimen/_2sdp"
             android:fontFamily="@font/droid_sans"
-            android:paddingStart="@dimen/_6sdp"
-            android:paddingEnd="@dimen/_6sdp"
+            android:padding="@dimen/_8sdp"
             android:text="@string/account_faq"
             android:textAlignment="textStart"
             android:textAllCaps="false"
@@ -192,8 +185,7 @@
             android:drawableTint="#8C8C8C"
             android:elevation="@dimen/_2sdp"
             android:fontFamily="@font/droid_sans"
-            android:paddingStart="@dimen/_6sdp"
-            android:paddingEnd="@dimen/_6sdp"
+            android:padding="@dimen/_8sdp"
             android:text="@string/account_howto"
             android:textAlignment="textStart"
             android:textAllCaps="false"
@@ -210,8 +202,7 @@
             android:drawableTint="#8C8C8C"
             android:elevation="@dimen/_2sdp"
             android:fontFamily="@font/droid_sans"
-            android:paddingStart="@dimen/_6sdp"
-            android:paddingEnd="@dimen/_6sdp"
+            android:padding="@dimen/_8sdp"
             android:text="@string/account_donate"
             android:textAlignment="textStart"
             android:textAllCaps="false"
@@ -228,8 +219,7 @@
             android:drawableTint="#8C8C8C"
             android:elevation="@dimen/_2sdp"
             android:fontFamily="@font/droid_sans"
-            android:paddingStart="@dimen/_6sdp"
-            android:paddingEnd="@dimen/_6sdp"
+            android:padding="@dimen/_8sdp"
             android:text="@string/account_logout"
             android:textAlignment="textStart"
             android:textAllCaps="false"
