--- a/app/src/main/res/drawable/ic_baseline_slideshow_24.xml
+++ b/app/src/main/res/drawable/ic_baseline_slideshow_24.xml
@@ -1,5 +1,5 @@
-<vector android:height="24dp" android:tint="#8C8C8C"
+<vector android:height="@dimen/_20sdp" android:tint="#8C8C8C"
     android:viewportHeight="24" android:viewportWidth="24"
-    android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    android:width="@dimen/_20sdp" xmlns:android="http://schemas.android.com/apk/res/android">
     <path android:fillColor="@android:color/white" android:pathData="M10,8v8l5,-4 -5,-4zM19,3L5,3c-1.1,0 -2,0.9 -2,2v14c0,1.1 0.9,2 2,2h14c1.1,0 2,-0.9 2,-2L21,5c0,-1.1 -0.9,-2 -2,-2zM19,19L5,19L5,5h14v14z"/>
 </vector>
