--- a/app/src/main/res/layout/manuka_admin_activity_more_on_order.xml
+++ b/app/src/main/res/layout/manuka_admin_activity_more_on_order.xml
@@ -56,6 +56,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/_4sdp"
+                    android:maxLines="1"
+                    android:ellipsize="end"
                     android:fontFamily="serif"
                     android:textColor="@color/colorBlackText"
                     android:textSize="@dimen/_20sdp"
