manuka - buynow updated model created

--- a/app/src/main/res/layout/manuka_activity_filter_search_result.xml
+++ b/app/src/main/res/layout/manuka_activity_filter_search_result.xml
@@ -125,15 +125,15 @@
             android:id="@+id/apply"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:background="@color/colorGreen"
+            android:background="@color/mainUiColour"
             android:drawableStart="@drawable/ic_baseline_check_24_apply_ilter_home"
-            android:drawablePadding="@dimen/_10sdp"
-            android:paddingStart="@dimen/_86sdp"
+            android:drawablePadding="@dimen/_4sdp"
+            android:textAlignment="center"
+            android:paddingStart="@dimen/_80sdp"
+            android:paddingEnd="@dimen/_80sdp"
             android:paddingTop="@dimen/_8sdp"
-            android:paddingEnd="@dimen/_86sdp"
             android:paddingBottom="@dimen/_8sdp"
-            android:text="Apply filters"
+            android:text="@string/apply_filters"
             android:textColor="@color/colorWhite"
             android:textSize="@dimen/_14sdp" />
 
